test/sema/methods/member_function_redeclaration.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {
  fn foo() {}

  // CHECK: [[# @LINE + 1 ]]:3: error: redeclaration of 'foo'
  fn foo(self: Self) {}
}

fn main() {}
